* 579ba6b (HEAD -> master) updated build file
* 34a85fb added TODO
* 768e163 output to file, added print function
* e9ddb3e updated changelog
* a40af0f updated build system with bash script
* 9dfbd05 made it one generate function, more macros
* 0053bf9 added id system for storing
* 6eccff5 updated README, updated Makefile
* 1d320c6 made some macros instead of constants, got rid of printing pwd to terminal
* 75d4b2f ran test to make sure freeing right memory allocation, passed btw
* f03ab1a able to store pwd unencrypted
* 2849d0e working out some kinks, but able to return array from generate function
* 89e4e76 updated file names, makefile, changed password generation
* b31ab2d made makefile for making files
* d587b8b added license, readme and makefile along with gitignore
* 3b0aa5c did some refactoring