@@ -1,3 +1,4 @@
 *.o
 *.out
-pwd
+pgm
+*.txt
